--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "moment": "^2.29.1",
         "vee-validate": "^4.4.5",
+        "vue-excel-export": "^0.1.3",
         "vue-material": "^1.0.0-beta-15",
         "vue-router": "^3.5.2",
         "vuetify": "^2.5.5",
