--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "moment": "^2.29.1",
         "vee-validate": "^4.4.5",
         "vue-excel-export": "^0.1.3",
+        "vue-excel-xlsx": "^1.0.11",
         "vue-material": "^1.0.0-beta-15",
         "vue-router": "^3.5.2",
         "vuetify": "^2.5.5",
