--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "moment": "^2.29.1",
+        "nodemon": "^2.0.20",
         "vee-validate": "^4.4.5",
         "vue-excel-xlsx": "^1.0.11",
         "vue-material": "^1.0.0-beta-15",
